<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="uuid">uuid</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="dobBundle">dob</string>
    <string name="monthlyplan">monthlyplan</string>
    <string name="activeStatus">activeStatus</string>
    <string name="startDob">startDob</string>
    <string name="endDob">endDob</string>
    <string name="diagnotsisArray">diagnotsisArray</string>
    <string name="subscriptionId">subscriptionId</string>
    <string name="iconImg">iconImg</string>
    <string name="basicdetails">Basic Details</string>
    <string name="diagnosisdata">Diagnosis</string>
    <string name="summary">Summary</string>
    <string name="bundlestate">BundleState</string>
    <string name="activeStateBundle">activeStateBundle</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="subUserId">subUserId</string>
    <string name="privacyData">"I agree to all Terms of Use and\nPrivacy Notice"</string>
    <string name="yesstr">Yes</string>
    <string name="nostr">No</string>
    <string name="assignLearner">assignLearner</string>
    <string name="learner">Learners</string>
    <string name="subuser">Subuser</string>
    <string name="overview">Overview</string>
    <string name="howitworkstr">howWork</string>
    <string name="datanotempty">data filled not empty</string>
    <string name="lovercaselearner">learner</string>
    <string name="lovercasesubuser">subuser</string>
    <string name="lovercaseoverview">overview</string>
    <string name="checkeditem">checkeditem</string>
    <string name="changeBorder">changeBorder</string>
    <string name="bordergone">borderErrorGone</string>
    <string name="app_name">Aris4Autism_project</string>
    <string name="skip"><u>Skip</u></string>
    <string name="dont_you_have_account">Don\'t Have An Account! Sign Up</string>
    <string name="emailstr">Enter your email</string>
    <string name="passwordstr">Enter your password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">LOGIN</string>
    <string name="activeBundle">activeStateBundle</string>
    <string name="bundleCast">BundleState</string>
    <string name="newpassword">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_password">Please enter your Password</string>
    <string name="enter_confirmpass">Please enter your confirm Password</string>
    <string name="enter_confirm_passwordd">Enter confirm password</string>
    <string name="chooseIcon">Choose Profile icon</string>
    <string name="logoutsuccess">Logout Successfully</string>
    <string name="howitwork">HOW IT WORKS</string>
    <string name="title_video">video title</string>
    <string name="dashboardvideo">video dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_basic_details">Enter your basic details</string>
    <string name="choose_profile_icon">Choose Profile icon</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sex">Gender</string>
    <string name="select">Select</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="next">NEXT</string>
    <string name="emailrequired">Email Required*</string>
    <string name="genderType">Please Select Gender Type</string>
    <string name="passwordrequired">Password Required*</string>
    <string name="email_id">Email ID</string>
    <string name="email_error">email and password empty!</string>
    <string name="enteryouremail">Please enter your email id.</string>
    <string name="password">Password</string>
    <string name="enterpasStr">Enter new password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="entermobilenumber">enter your mobile number</string>
    <string name="emailid">Email Id</string>
    <string name="emailaddress">Email Address</string>
    <string name="sextx">Sex</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="subscriptiondata">Subscription</string>
    <string name="mm_dd_yyyystr">MM/DD/YYYY</string>
    <string name="fullnmtx">Full Name</string>
    <string name="gen">Sex</string>
    <string name="F">Date of Birth</string>
    <string name="emailData">Email ID</string>
    <string name="mobileNoStr">Mobile Number</string>
    <string name="date_of_birthdata">Date Of Birth</string>
    <string name="passwordstar">Password</string>
    <string name="selectlearner">Select Learner</string>
    <string name="phonenumber">Phone Number</string>
    <string name="enterqueries">Enter Queries</string>
    <string name="confirmPassdata">Enter confirm password</string>
    <string name="confirm_passwordstr">Confirm password</string>
    <string name="bothValidationEmpy">email and password empty!</string>
    <string name="enteremail">Please enter your email</string>
    <string name="validcredential">Valid Credentials!</string>
    <string name="validRegistration">valid registration</string>
    <string name="invalidcredential">Empty credential</string>
    <string name="invalidemail">Invalid email address*</string>
    <string name="enterpassword">Please enter your Password</string>
    <string name="tendigitallow">"Password Only 10 digit allow!</string>
    <string name="validCredit">validRegistration</string>
    <string name="invalidCredential">Invalid Credential</string>
    <string name="enterfullaname">Please enter your full name</string>
    <string name="fllname">Please enter your Full Name</string>
    <string name="entermobile">Please enter your Mobile Number</string>
    <string name="mNo">Mobile number must be of 10 digits</string>
    <string name="mobileNumber">Please enter your Mobile Number</string>
    <string name="emailAddress">Please enter your Email Address</string>
    <string name="invalidEmail">Please enter a valid Email Address</string>
    <string name="genderStr">Please select your Gender Type</string>
    <string name="fullname">Enter fullname*</string>
    <string name="passEnter">Enter Your </string>
    <string name="mobileno">Enter mobile number</string>
    <string name="fullnm">Full Name</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="emailadd">Enter Email address*</string>
    <string name="emailidstr">Email ID</string>
    <string name="selectgen">Select Gender*</string>
    <string name="sexstr">Sex</string>
    <string name="profileicon">Choose Profile Icon</string>
    <string name="selectGen">Select</string>
    <string name="dobstr">Date of Birth</string>
    <string name="dob">data</string>
    <string name="dobSelect">Select Date of birth*</string>
    <string name="selectDob">Please select your Date of Birth</string>
    <string name="enterpass">Please enter your Password</string>
    <string name="passStr">Password</string>
    <string name="tendigit">Only 10 digit allow*</string>
    <string name="dobStr">Please select your Date of Birth</string>
    <string name="passwordStr">Please enter your Password</string>
    <string name="passData">Password</string>
    <string name="mobileValidation">Mobile number must be of 10 digits</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="validlogin">valid credention!</string>
    <string name="invalidEmailData">Invalid email address!</string>
    <string name="emailpassempty">email and password empty.</string>
    <string name="emaildata">Enter your email</string>
    <string name="passwordenter">Enter Confirm password!</string>
    <string name="passwordStrConfirm">Please enter your Confirm password</string>
    <string name="passconfirm">Enter Confirm password*</string>
    <string name="passSame">Password and Confirm password must be same</string>
    <string name="passValidation">Password should be minimum of 6 characters and must contain at least one number,one special character, and both uppercase and lowercase letters</string>
    <string name="passwordValidation">Password should be minimum of 6 characters and must contain at least one number,one special character, and both uppercase and lowercase letters</string>
    <string name="confirmpasswordValidation">Confirm Password should be minimum of 6 characters and must contain at least one number,one special character, and both uppercase and lowercase letters</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="enter_your_address_line_1">Enter your address line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="enter_your_address_line_2">Enter your address line 2</string>
    <string name="street_name">Street Name</string>
    <string name="enter_your_street_name">Enter your street name</string>
    <string name="stringzipcode">Enter your zip code</string>
    <string name="SIGNUP">SIGN UP</string>
    <string-array name="countryStr">
        <item>India</item>
        <item>US</item>
        <item>UK</item>
    </string-array>
    <string name="zip_codeStr">Zip Code</string>
    <string-array name="stateStr">
        <item>Gujarat</item>
        <item>Punjab</item>
        <item>Kerla</item>
    </string-array>
    <string name="emptyData">Empty credentials</string>
    <string name="fillalldetails">Fill add details</string>
    <string name="iconStatus">IconStatus</string>
    <string name="validCredential">ValidCredential</string>
    <string name="addressLine1Error">Please enter your Address Line 1</string>
    <string name="addressLine2Error">Please enter your Address Line 2</string>
    <string name="streetNameError">Please select your Street Name</string>
    <string name="countryError">Please select your Country</string>
    <string name="stateError">Please select your State</string>
    <string name="zipCodeError">Please enter a correct Zip Code</string>
    <string name="zipCodeValidation">Zip code should be minimum of 5 digits</string>
    <string name="selectData">Select</string>
    <string name="sign_in">SIGN IN</string>
    <string name="choose_profile_icosnstr">Choose Profile icon</string>
    <string name="enter_your_basic_detailsstr">Enter your basic details</string>
    <string name="enter_your_full_namestr">Enter your full name</string>
    <string name="enter_your_mobile_numberStr">Enter your mobile number</string>
    <string name="enter_your_emailStr">Enter your email</string>
    <string name="selectStr">Select</string>
    <string name="mm_dd_yyyyStr">MM/DD/YYYYStr</string>
    <string name="nextStr">NEXT</string>
    <string name="forgot_passwordStr">Forgot Password</string>
    <string name="sendStr">SEND</string>
    <string name="versionName">Ver 1.0(21)</string>
    <string name="privacy">I agree to all Terms of Use and\nPrivacy Notice</string>
    <string name="how_it_works">How It Works</string>
    <string name="miteshstr">Mitesh</string>
    <string name="malestr">Male</string>
    <string name="_27_years_10_monthsstr">27 Years 10 Months</string>
    <string name="dob_06_30_1995str">DOB:06-30-1995</string>
    <string name="_2136_6_months_planstr">#2136 - 6 Months Plan</string>
    <string name="address_line_1data">Address Line 1</string>
    <string name="address_line_2data">Address Line 2</string>
    <string name="street_namedata">Street Name</string>
    <string name="countrystr">Country</string>
</resources>