<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddressDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidLineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidLineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxAddress"
            style="@style/customSyleLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/address_line_1data"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            app:placeholderText="@string/enter_your_address_line_1"
            app:placeholderTextColor="@color/tablightgray"
            tools:hintWithAsterisk="@{@string/address_line_1}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFullName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxAddressdata2"
            style="@style/customSyleLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/address_line_2data"
            app:layout_constraintTop_toBottomOf="@+id/idtxAddress"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            app:placeholderText="@string/enter_your_address_line_2"
            app:placeholderTextColor="@color/tablightgray"
            tools:hintWithAsterisk="@{@string/address_line_2}"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idedAddress2"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxStreetName"
            style="@style/customSyleLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/street_namedata"
            android:layout_marginTop="15dp"
            app:placeholderTextColor="@color/tablightgray"
            app:placeholderText="@string/street_name"
            app:layout_constraintTop_toBottomOf="@+id/idtxAddressdata2"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            tools:hintWithAsterisk="@{@string/street_name}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idedStreetName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxcountry"
            style="@style/customSpinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/countrystr"
            app:placeholderText="@string/countryStr"
            app:placeholderTextColor="@color/tablightgray"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/idtxStreetName"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            tools:hintWithAsterisk="@{@string/countryStr}">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/idEdCountry"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxState"
            style="@style/customSpinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="State"
            app:placeholderText="@string/stateStr"
            app:placeholderTextColor="@color/tablightgray"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/idtxcountry"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            tools:hintWithAsterisk="@{@string/stateStr}">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/idEdState"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idtxZipCode"
            style="@style/customSyleLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="Zip Code"
            app:placeholderTextColor="@color/tablightgray"
            app:placeholderText="@string/zip_codeStr"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/idtxState"
            app:layout_constraintEnd_toEndOf="@+id/guidLineRight"
            app:layout_constraintStart_toStartOf="@+id/guidLineLeft"
            tools:hintWithAsterisk="@{@string/zip_codeStr}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdZipCode"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/darkblue"
            android:fontFamily="@font/osward"
            android:text="SAVE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidLineRight"
            app:layout_constraintStart_toStartOf="@id/guidLineLeft"
            app:layout_constraintTop_toBottomOf="@+id/idtxZipCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>